Fixed overflow issue

--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ p {
   font-weight: "700";
   padding: 0em;
   margin: 0em;
+  overflow: hidden;
 }
 
 #header #menu-btn {
